<resources>
    <string name="app_name">Digital Fitness</string>
    <string name="action_settings">Settings</string>
    <string name="hi">Hi </string>
    <string name="add_meal">Add\nMeal</string>
    <string name="new_exercise">New\nExercise</string>
    <string name="history">History</string>
    <string name="disp_name">Display Name:</string>
    <string name="gender">Gender:</string>
    <string name="birth_date">Birth Date:</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="weight_be_honest">Weight (Be Honest):</string>
    <string name="height_request">Height:</string>
    <string name="goal_weight">Weekly weight change goal:</string>
    <string name="general_activity">How active are you?</string>
    <string name="select_prior_meal">Select Prior Meal:</string>
    <string name="big_or">--------OR--------</string>
    <string name="new_meal_selection">New Meal Selection:</string>
    <string name="name_meal_here">---Name Meal Here---</string>
    <string name="cal_per_serving">Calories per serving:</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="findActivity">Please find your activity from our database:</string>
    <string name="exercise_page_divider">---------------------------------------</string>
    <string name="selectActivity">Specific Activity:</string>
    <string name="type">Activity Type:</string>
    <string name="type_button">Submit Type</string>
    <string name="timeSpent">Enter Time spent on activity (In Hours)</string>
    <string name="activityButton">Enter Activity</string>
    <string name="cal_burned_message">Number of Calories Burned:</string>
    <string name="edit_Text_Hint">---</string>
    <string name="calculate">Calculate</string>
    <string name="history_welcome">Your Four-week History</string>
    <string name="date_select">Select a date:</string>
    <string name="history_weight">Weight:</string>
    <string name="history_cals_consumed">Calories consumed:</string>
    <string name="history_cals_burned">Calories burned:</string>
    //---------------Persistent Settings------------------------------
    <string name="PREF_FILE">APP_PREF_FILE</string>
    <string name="USER_NAME">APP_USER_NAME</string>
    <string name="ACC_EXIST">APP_ACC_EXIST</string>
    <string name="USER_BDAY">APP_USER_BDAY</string>
    <string name="CURR_DATE">APP_CURR_DATE</string>
    <string name="USER_GENDER">APP_USER_GENDER</string>
    <string name="GENDER_CONST">APP_GENDER_CONSTANT</string>
    <string name="USER_WEIGHT">APP_USER_WEIGHT</string>
    <string name="USER_GOAL_WEIGHT">APP_USER_GOAL_WEIGHT</string>
    <string name="USER_GOAL_WEIGHT_UNIT">APP_USER_GOAL_WEIGHT_UNIT</string>
    <string name="USER_WEIGHT_UNIT">APP_USER_WEIGHT_UNIT</string>
    <string name="USER_HEIGHT">APP_USER_HEIGHT</string>
    <string name="USER_HEIGHT_UNIT">APP_USER_HEIGHT_UNIT</string>
    <string name="GOAL_WEIGHT">APP_GOAL_WEIGHT</string>
    <string name="ACTIVITY_LEVEL">APP_ACT_LEVEL</string>
    <string name="ACT_LVL_CONSTANT">APP_ACT_LVL_CONSTANT</string>
    <string name="USER_BMR">APP_USER_BMR</string>
    <string name="ITEM_LIST">APP_USER_PREV_ITEM_LIST</string>
    <string name="CAL_LIST">APP_USER_PREV_ITEM_CALORIE_LIST</string>
    <string name="TODAY_CAL">APP_USER_PREV_ITEM_CALORIE_EATEN_TODAY</string>
    <string name="TODAY_DATE">APP_USER_THE_LAST_DATE_OPENED</string>
    <string name="USR_BDAY_DAY">APP_USER_THE_DAY_OF_USERS_BIRTH</string>
    <string name="USR_BDAY_MONTH">APP_USER_THE_MONTH_OF_USERS_BIRTH</string>
    <string name="USR_BDAY_YEAR">APP_USER_THE_YEAR_OF_USERS_BIRTH</string>
    <string name="USER_SETTINGS_NAME">APP_USER_SETTINGS_NAME</string>
    <string name="USER_SETTINGS_WEIGHT">APP_USER_SETTINGS_WEIGHT</string>
    <string name="USER_SETTINGS_HEIGHT">APP_USER_SETTINGS_HEIGHT</string>
    <string name="ACTIVITY_SETTING_LEVEL">APP_USER_SETTINGS_ACTIVITY_LEVEL</string>
    <string name="USER_CALORIE_CHANGE">APP_USER_CALORIE_CHANGE</string>
</resources>
