<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:background="@drawable/backgroundlines">

    <TextView
        android:id="@+id/Heading"
        android:text="@string/findActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/exercise_page_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/type_text"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/type_text"
            android:id="@+id/type_spinner_id"
            android:background="#ff6262" />
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/type_button"
            android:textSize="15sp"
            android:onClick="selectTypeButtonAction"
            android:id="@+id/type_button"
            android:background="@drawable/redbutton2" />
    </RelativeLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:text="@string/selectActivity"
           android:id="@+id/select_activity"
           android:textSize="15sp"
           android:textStyle="bold"/>

        <Spinner
           android:layout_width="200dp"
           android:layout_height="50dp"
           android:layout_toEndOf="@id/select_activity"
           android:layout_toRightOf="@id/select_activity"
           android:id="@+id/activity_spinner_id"
           android:background="#ff6262" />
   </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/timeSpent"
        android:id="@+id/timeSpent"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/timeSpent_editText_id"
        android:inputType="numberDecimal"
        android:hint="@string/edit_Text_Hint"
        android:background="#ff6262"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/exercise_page_divider"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cal_burned_message"
            android:layout_alignParentLeft="true"
            android:id="@+id/cal_burn_message"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/cal_burn_message"
            android:textColor="#640000"
            android:background="#ff6262"
            android:id="@+id/cals_burned_displayText_id"/>

    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/calculate"
            android:textSize="30sp"
            android:onClick="onCalculate"
            android:id="@+id/calculate_button_id"
            android:background="@drawable/redbutton2"
            android:layout_marginTop="60dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/submit"
            android:textSize="30sp"
            android:onClick="SubmitExercise"
            android:id="@+id/submit_button_id"
            android:background="@drawable/redbutton2"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>