<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundlines">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_name"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/disp_name_id"
        android:background="#ff6262" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/gender"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:id="@+id/gender_spinner_id"
        android:background="#ff6262"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/birth_date"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:id="@+id/birth_date_id"
            android:background="#ff6262"
            android:inputType="number"
            android:hint="@string/day"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/month_date_spinner_id"
            android:background="#ff6262"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:id="@+id/birth_year_id"
            android:inputType="number"
            android:background="#ff6262"
            android:layout_alignParentRight="true"
            android:hint="@string/year"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/weight_be_honest"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:inputType="number"
            android:id="@+id/weight_number_id"
            android:background="#ff6262"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/weight_unit_spinner_id"
            android:background="#ff6262"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/height_request"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:inputType="number"
            android:id="@+id/height_number_id"
            android:background="#ff6262"/>
        <Spinner
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/height_unit_spinner_id"
            android:background="#ff6262"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/goal_weight"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/goal_weight_amount_spinner_id"
            android:background="#ff6262" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/goal_weight_unit_spinner_id"
            android:background="#ff6262"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/general_activity"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:id="@+id/activity_amount_spinner_id"
        android:background="#ff6262"/>

    <Button
        android:layout_width="108dp"
        android:layout_height="65dp"
        android:layout_gravity="right|bottom"
        android:layout_marginTop="10dp"
        android:text="Submit"
        android:textSize="25sp"
        android:onClick="onSubmitProfile"
        android:background="@drawable/redbutton2" />

</LinearLayout>
</ScrollView>