<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:text="@string/history_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <TextView android:text="@string/date_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/choose_date_id"
        android:layout_gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:id="@+id/history_date_id"
            android:background="#b4e2ff"
            android:hint="@string/day"/>

        <Spinner
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:id="@+id/history_month_spinner_id"
            android:background="#b4e2ff"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:id="@+id/history_year_id"
            android:background="#b4e2ff"
            android:layout_alignParentRight="true"
            android:hint="@string/year"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Submit"
        android:textSize="25sp"
        android:onClick="onSubmitHistory"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:text="@string/history_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#640000"
            android:id="@+id/history_weight_id"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:text="@string/history_cals_consumed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#640000"
            android:id="@+id/history_cals_consumed_id"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView android:text="@string/history_cals_burned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#640000"
            android:id="@+id/history_cals_burned_id"/>
    </LinearLayout>

</LinearLayout>